<resources>
    <string name="app_name">IrisLock</string>
    <string name="wifiConnected">智能门锁Wifi已连接</string>
    <string name="wifiUnConnected">智能门锁Wifi未连接</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="name">姓名：</string>
    <string name="phone">手机：</string>
    <string name="address">地区：</string>
    <string name="choose">请选择</string>
    <string name="street">街道：</string>

    <string name="state">点击“注册”按钮表示您已同意</string>
    <string name="state_link">《虹娘科技软件许可及服务协议》</string>
    <string name="adminRegister">管理员注册</string>
    <string name="company">北京虹娘科技有限公司</string>
    <string name="alert">报警信息</string>
    <string name="admin">管理员</string>
    <string name="authorization">远程授权</string>
    <string name="state_safe">您的家很安全</string>
    <string name="edit">编辑</string>
    <string name="alertInfo">报警信息</string>
    <string name="delete">删除</string>
    <string name="adminLogin">管理员登录/注册</string>
    <string name="visitorLogin">我是游客</string>
    <string name="isAdmin">我是管理员</string>
    <string name="adminInfo">管理员</string>
    <string name="tell_us">请拨打客服电话：</string>
    <string name="services_phone">400-110-119</string>
    <string name="monitor">监控信息</string>
    <string name="newUserInfoTemp">新用户信息—临时</string>
    <string name="idValidityTime">身份有效期</string>
    <string name="yearMonthDay">年-\t\t月-\t\t日-\t\t</string>
    <string name="zhi">至</string>
    <string name="idValidityLength">有效时段</string>
    <string name="assuredAdd">确认添加</string>
    <string name="mon">星期一</string>
    <string name="tus">星期二</string>
    <string name="wed">星期三</string>
    <string name="thu">星期四</string>
    <string name="fri">星期五</string>
    <string name="sat">星期六</string>
    <string name="sun">星期日</string>
    <string name="periodOfTime">时段</string>
    <string name="allDay">全天</string>
    <string name="twentyFour">24小时制</string>
    <string name="enterCount">当前录入次数 : </string>
    <string name="authorizationDesc">注：授权申请应在临时授权许可时间内发生</string>
    <string name="authorizationOk">确认授权</string>
    <string name="authorizationCancel">拒绝此次授权</string>
    <string name="authorizationInfo">您有一个授权请求！</string>
    <string name="clickToSee">点击查看</string>
    <string name="authorized">[身份-用户名]已授权</string>
    <string name="data">2016-05-20</string>
    <string name="delete_all">清除</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="monitor_picture">监控图片</string>
    <string name="sex">性别：</string>
    <string name="newUserInfoFixed">新用户信息-永久</string>
    <string name="zero_clock">0:00</string>
    <string name="settings">设置</string>
    <string name="networkConnection">网络连接</string>
    <string name="passwordSetting">密码设置</string>
    <string name="soundSetting">声音设置</string>
    <string name="about">关于</string>
    <string name="numberPwd">数字解锁</string>
    <string name="imagePwd">图形解锁</string>
    <string name="inputPwd">请输入密码</string>
    <string name="inputPwdAgain">请再次输入密码</string>
    <string name="inputPwdOld">请输入原密码</string>
    <string name="inputWiFiPwd">请输入WiFi密码</string>
    <string name="about_hint">我是萌萌哒的说明君=￣ω￣=</string>
    <string name="fixed_user">永久用户</string>
    <string name="tmp_user">临时用户</string>
</resources>
