<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:id="@+id/fixedUser"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/fixed_user"
        android:textSize="@dimen/text_size_title"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colorIngigo"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"/>

    <TextView
        android:id="@+id/tmpUser"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/tmp_user"
        android:textSize="@dimen/text_size_title"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colorIngigo"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"/>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/cancel"
        android:textSize="@dimen/text_size_title"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colorIngigo"/>

</LinearLayout>