<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_white">
    <TextView
        android:id="@+id/numberPwd"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="@dimen/text_size_standard"
        android:text="@string/numberPwd"
        android:gravity="center"
        android:textColor="@color/colorIngigo"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorIngigo"/>

    <TextView
        android:id="@+id/imagePwd"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/imagePwd"
        android:gravity="center"
        android:textSize="@dimen/text_size_standard"
        android:textColor="@color/colorIngigo"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorIngigo"/>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/cancel"
        android:textSize="@dimen/text_size_standard"
        android:textColor="@color/colorIngigo"
        android:gravity="center"
        />

</LinearLayout>