<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/left_margin"
    android:layout_marginRight="@dimen/left_margin">

    <ImageView
        android:id="@+id/shieldImage"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shield_little"/>
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/isWifiConnectIcon"
        android:layout_width="22dp"
        android:layout_height="16dp"
        android:layout_below="@+id/shieldImage"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/isWifiConnectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@+id/isWifiConnectIcon"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_size_standard"
        android:textColor="@color/colorIngigo"
        android:text="@string/wifiConnected"/>

    <RadioGroup
        android:id="@+id/chooseSex"
        android:layout_below="@+id/isWifiConnectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        >
        <RadioButton
            android:id="@+id/maleRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/sex_radio_bg"
            android:checked="true"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="@dimen/text_size_standard"
            android:layout_marginLeft="12dp"
            android:textColor="@color/colorIngigo"/>
        <RadioButton
            android:id="@+id/femaleRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/sex_radio_bg"
            android:layout_marginLeft="@dimen/left_margin"
            android:checked="false"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="@dimen/text_size_standard"
            android:layout_marginLeft="12dp"
            android:textColor="@color/colorIngigo"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/chooseSex">
        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_standard"
            android:text="@string/name"
            />

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_standard"
            android:singleLine="true"
            android:textColor="@color/colorEditText"
            android:background="@null"
            />
        <CheckBox
            android:id="@+id/nameCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:button="@drawable/checkbox_bg"
            android:clickable="false"/>
    </LinearLayout>
    <View
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/colorText"
        android:layout_below="@+id/nameLayout"/>

    <LinearLayout
        android:id="@+id/phoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/line1">
        <TextView
            android:id="@+id/phoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_standard"
            android:text="@string/phone"
            />

        <EditText
            android:id="@+id/phoneEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_standard"
            android:singleLine="true"
            android:textColor="@color/colorEditText"
            android:background="@null"
            />
        <CheckBox
            android:id="@+id/phoneCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:button="@drawable/checkbox_bg"
            android:clickable="false"/>
    </LinearLayout>
    <View
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/colorText"
        android:layout_below="@+id/phoneLayout"/>

    <LinearLayout
        android:id="@+id/addressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/line2">
        <TextView
            android:id="@+id/addressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_standard"
            android:text="@string/address"
            />

        <TextView
            android:id="@+id/addressEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_standard"
            android:textColor="@color/colorEditText"
            android:background="@null"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_standard"
            android:text="@string/choose"
            android:textColor="@color/colorIngigo"/>
        <CheckBox
            android:id="@+id/addressCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:button="@drawable/checkbox_bg"
            android:clickable="false"/>
    </LinearLayout>
    <View
        android:id="@+id/line3"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/colorText"
        android:layout_below="@+id/addressLayout"/>

    <LinearLayout
        android:id="@+id/streetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/line3">
        <TextView
            android:id="@+id/streetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_standard"
            android:text="@string/street"
            />

        <EditText
            android:id="@+id/streetEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_standard"
            android:singleLine="true"
            android:textColor="@color/colorEditText"
            android:background="@null"
            />
        <CheckBox
            android:id="@+id/streetCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:button="@drawable/checkbox_bg"
            android:clickable="false"/>
    </LinearLayout>
    <View
        android:id="@+id/line4"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/colorText"
        android:layout_below="@+id/streetLayout"/>



    <Button
        android:id="@+id/register"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_above="@+id/state"
        android:enabled="false"
        android:background="@drawable/bg_button_register"
        android:layout_centerHorizontal="true"
        android:text="@string/adminRegister"
        android:textColor="@color/colorWhite"/>


    <TextView
        android:id="@+id/state"
        android:layout_above="@+id/stateLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/text_size_little"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/stateLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/state_link"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/text_size_little"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>