<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@color/colorGray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorWhite">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textColor="@color/colorIngigo"
            android:textSize="@dimen/text_size_standard"
            android:text="@string/mon"
            android:layout_centerVertical="true"/>
        <CheckBox
            android:id="@+id/monCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:button="@drawable/sex_radio_bg"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textColor="@color/colorIngigo"
            android:textSize="@dimen/text_size_standard"
            android:text="@string/tus"
            android:layout_centerVertical="true"/>
        <CheckBox
            android:id="@+id/tusCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:button="@drawable/sex_radio_bg"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textColor="@color/colorIngigo"
            android:textSize="@dimen/text_size_standard"
            android:text="@string/wed"
            android:layout_centerVertical="true"/>
        <CheckBox
            android:id="@+id/wedCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:button="@drawable/sex_radio_bg"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textColor="@color/colorIngigo"
            android:textSize="@dimen/text_size_standard"
            android:text="@string/thu"
            android:layout_centerVertical="true"/>
        <CheckBox
            android:id="@+id/thuCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:button="@drawable/sex_radio_bg"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textColor="@color/colorIngigo"
            android:textSize="@dimen/text_size_standard"
            android:text="@string/fri"
            android:layout_centerVertical="true"/>
        <CheckBox
            android:id="@+id/friCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:button="@drawable/sex_radio_bg"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textColor="@color/colorIngigo"
            android:textSize="@dimen/text_size_standard"
            android:text="@string/sat"
            android:layout_centerVertical="true"/>
        <CheckBox
            android:id="@+id/satCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:button="@drawable/sex_radio_bg"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textColor="@color/colorIngigo"
            android:textSize="@dimen/text_size_standard"
            android:text="@string/sun"
            android:layout_centerVertical="true"/>
        <CheckBox
            android:id="@+id/sunCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:button="@drawable/sex_radio_bg"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorWhite">

        <RadioGroup
            android:id="@+id/chooseType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="25dp"
            >
            <RadioButton
                android:id="@+id/timeRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/sex_radio_bg"
                android:layout_gravity="left"
                android:checked="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/periodOfTime"
                android:textSize="@dimen/text_size_standard"
                android:layout_marginLeft="12dp"
                android:textColor="@color/colorIngigo"/>
            <RadioButton
                android:id="@+id/allDayRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/sex_radio_bg"
                android:layout_marginLeft="90dp"
                android:gravity="right"
                android:checked="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allDay"
                android:textSize="@dimen/text_size_standard"
                android:layout_marginLeft="12dp"
                android:textColor="@color/colorIngigo"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_below="@+id/chooseType"
            android:layout_marginTop="30dp">
            <TextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twentyFour"
                android:textSize="@dimen/text_size_standard"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/zhi"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/colorIngigo"
                android:textSize="@dimen/text_size_standard"/>
            <TextView
                android:id="@+id/stopTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twentyFour"
                android:textSize="@dimen/text_size_standard"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>