<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="horizontal"
    android:gravity="center_vertical">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:padding="@dimen/list_space"
        >
        <ImageView
            android:id="@+id/deleteView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_delete"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:layout_marginLeft="5dp"
            />
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/monitorView"
            android:layout_width="80dp"
            android:layout_height="112dp"
            android:layout_toRightOf="@+id/deleteView"
            />


        <RelativeLayout
            android:id="@+id/detailLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/monitorView">
            <CheckBox
                android:id="@+id/pictureDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textColor="@color/colorIngigo"
                android:button="@drawable/checkbox_authorize_bg"
                android:checked="false"
                android:padding="5dp"
                android:layout_alignParentTop="true"/>
            <TextView
                android:id="@+id/pictureName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_standard"
                android:textColor="@color/colorIngigo"
                android:text="@string/app_name"
                android:layout_centerVertical="true"
                android:layout_alignRight="@+id/pictureDate"/>
            <TextView
                android:id="@+id/pictureType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/pictureDate"
                android:text="@string/wed"
                android:layout_alignParentBottom="true"
                android:textColor="@color/colorIngigo"
                />
        </RelativeLayout>



    </RelativeLayout>
    <TextView
        android:id="@+id/deleteButton"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:textColor="@android:color/white"
        android:layout_gravity="end"
        android:gravity="center"
        android:background="@color/colorRed"
        android:text="@string/delete"/>
</LinearLayout>