<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/left_margin"
    android:layout_marginRight="@dimen/left_margin">

    <ImageView
        android:id="@+id/shieldImage"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shield_little"/>


    <Button
        android:id="@+id/adminRegisterButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/button_space"
        android:layout_below="@+id/shieldImage"
        android:background="@drawable/bg_button_register_enable"
        android:layout_centerHorizontal="true"
        android:text="@string/adminRegister"
        android:textColor="@color/colorWhite"/>

    <Button
        android:id="@+id/isAdminButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/button_space"
        android:layout_below="@+id/adminRegisterButton"
        android:background="@drawable/bg_button_register_enable"
        android:layout_centerHorizontal="true"
        android:text="@string/isAdmin"
        android:textColor="@color/colorWhite"/>


    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/isWifiConnectedIcon"
        android:layout_width="22dp"
        android:layout_height="16dp"
        android:layout_below="@+id/isAdminButton"
        android:layout_marginTop="@dimen/button_space"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/isWifiConnectedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@+id/isWifiConnectedIcon"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_size_standard"
        android:textColor="@color/colorIngigo"
        android:text="@string/wifiConnected"/>







</RelativeLayout>